test/libsolidity/syntaxTests/natspec/docstring_empty_description.sol
contract C {
    /// @param id
    function vote(uint id) public {}
}
// ----
// DocstringParsingError 9942: No description given for param id
